re PR libgcj/30742 (ResourceBundle regression)

2007-02-10  Andrew Haley  <aph@redhat.com>

	PR java/30742
	* gnu/classpath/natVMStackWalker.cc (GET_CALLING_CLASS): New.
	(getCallingClass): Call GET_CALLING_CLASS.
	(getCallingClassLoader): Likewise.

From-SVN: r121798